@@ -263,6 +263,7 @@ int main(int argc, char **argv) {
 	bool                no_upgrade(false);    /* Do not upgrade, just verify */
 	bool                no_verify(false);     /* Do not verify, just upgrade */
 	bool                no_reboot(false);     /* Do not reboot after upgrade or verify */
+	bool                le(false);            /* Write little endian */
 	const char*         device = "eth0";      /* Hardware device to use */
 	const char*         target = "broadcast"; /* User specified target name */
 	const unsigned char*mac = 0;              /* Ethernet address to upgrade. */
@@ -299,6 +300,7 @@ int main(int argc, char **argv) {
 { "ram-payload:              payload (replaces ramdisk)",       required_argument, 0, 'R' },
 { "rootfs:                   jffs2 (flash) rootfs",             required_argument, 0, 'j' },
 { "payload:                  FIS directory payload",            required_argument, 0, 'p' },
+{ "little-endian:            byte swap flash contents",         no_argument,       0, 'l' },
 { "product-id[1]:            2 byte product id",                required_argument, 0, 'P' },
 { "protocol-id[0]:           2 byte protocol id",               required_argument, 0, 'T' },
 { "firmware-version[0x2329]: 2 byte firmware version",          required_argument, 0, 'F' },
@@ -315,6 +317,7 @@ int main(int argc, char **argv) {
 	case ':':
 	case '?': std::exit(1);
 	case 'h': help(options); std::exit(1);
+	case 'l': le = true; break;
 	case 'd': device = optarg; break;
 	case 't': target = optarg; parse_mac(macBuffer, target); mac = macBuffer; break;
 	case 'v': no_verify = false; no_upgrade = true; break;
@@ -362,6 +365,7 @@ done:
 				 */
 				Pointer<NSLU2Image::Image> image(
 						NSLU2Image::Image::MakeImage(
+							le,
 							kernel,
 							ram_payload != 0, /* noramdisk */
 							ram_payload ? ram_payload : ram_disk,
